--- a/frontend/themes/flowcrmtutorial/styles.css
+++ b/frontend/themes/flowcrmtutorial/styles.css
@@ -9,3 +9,20 @@ a[highlight] {
     text-decoration: underline;
 }
 
+
+    [theme~="dark"] {
+        --lumo-base-color: #272d2d;
+
+        --lumo-primary-color: #01cff9;
+        --lumo-primary-color-50pct: #01cff9;
+        --lumo-primary-text-color: #01cff9;
+
+        --lumo-contrast-5pct: hsla(214, 65%, 85%, 0.06);
+        --lumo-error-color: hsl(3, 79%, 49%);
+        --lumo-header-text-color: #01cff9;
+        --lumo-body-text-color: hsla(0, 0%, 100%, 0.9);
+        --lumo-secondary-text-color: #c1dee5;
+        --lumo-tertiary-text-color: #ffffff;
+
+        --lumo-error-text-color: hsl(3, 79%, 49%)
+    }
